# ProjectLUT

./: .gitignore  CLAUDE.md  ISSUES.md  README.md  [2604.02409] LumiVideo_ An Intelligent Agentic System for Video Color Grading.htm  _check_port.py  _e2e.py  _probe.py  _run_serve.py  _serve.err  _serve.pid  _start.ps1  _test_api.py  _test_quick.py  app.html  projectLUT.xmind  pyproject.toml  requirements.txt  serve.py
LUT预设1/: LUTs1(cube).md
LUT预设1/iPhone 专用lut-合集1/iPhone 标准版合集1(REC709)/: 中性电影film-709.cube  复古vintage-709.cube  富士3513-709.cube  电影暖调709.cube
LUT预设1/iPhone 专用lut-合集1/iPhone 标准版合集1(log)/: 2383柯达胶片.cube  3513富士胶片.cube  SHINE清新.cube  cine电影.cube  柯达5213.cube
LUT预设1/iPhone 专用lut-合集2/Apple 专用（709）/: CINE中性冷白709.cube  N-CINE1复古暖调709.cube  cinematic709.cube
LUT预设1/iPhone专用lut合集3/iPhone合集3标准版（709）/: FAKE理光负片709.cube  FAKE理光负片（暖）709.cube  FAKE胶片1980-709.cube  FAKE胶片复古709.cube  odd街头709.cube  默片时代709.cube
LUT预设1/富士LUT改款/709机型使用/: 富士ASTIA-709.cube  (+1 more)
docs/: architecture.md  code-reading-guide.md  color-pipeline.md  projectlutu-architecture.drawio  search-analytics-design.md  search-lifecycle.drawio
docs/archive/: lightrag-modules.md  lut-workflow-research.md
docs/reference/: lightrag-readme-cn.md
scripts/: _check.py  _check_deps.py  _make_test_image.py  _quick_ping.py  _serve_simple.py  _start_server.py
scripts/archive/: _e2e_check.py  _verify.py  embedder.py
src/lut/: cli.py  direct_embed.py  matcher.py  parser.py  processor.py  rerank.py
tests/: test_direct_embed.py  test_lightrag_integration.py  test_parser.py  test_processor.py  test_rerank.py
(+110 files in other folders)
