[project]
name = "projectlut"
version = "0.1.0"
description = "LUT 调色预设语义检索 — 一句话套用预设"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4",
    "opencv-python>=4.13",
    "colour-science>=0.4",
    "Pillow>=12",
    "scipy>=1.17",
    "matplotlib>=3.10",
    "scikit-image>=0.26",
    "imageio>=2.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
lut = "lut.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lut"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
